--- a/css/style.scss
+++ b/css/style.scss
@@ -188,7 +188,7 @@ section#hero {
   }
 
   .hero-content {
-    max-width: 616px;
+    // max-width: 616px;
     margin-left: auto;
     margin-right: auto;
 
@@ -560,6 +560,10 @@ footer#siteFooter {
   }
 
   .footer-right {
+
+    h4.sign-up-title {
+      font-size: 20px;
+    }
 
     form#mktoForm_1479 {
       padding: 0;
