--- a/css/style.scss
+++ b/css/style.scss
@@ -520,6 +520,228 @@ section.contact-us {
 
 }
 
+section.sign-up {
+
+  form#mktoForm_1479 {
+    padding: 0;
+    max-width: 100%;
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    flex-wrap: wrap;
+    width: 535px !important;
+
+    input, button[type="submit"] {
+      border-radius: 2px !important;
+      border: none !important
+    }
+
+    h2 {
+      font-weight: 200;
+    }
+
+    .mktoFormRow:nth-child(2) { //email
+      order: -1;
+      .mktoError {
+        right: unset !important;
+        bottom: -69px !important;
+      }
+      label[for="Email"], .mktoOffset, .mktoClear, .mktoGutter.mktoHasWidth {
+        display: none;
+      }
+      input {
+        width: 100%;
+        border-right: 2px;
+        border: 1px solid $gray;
+        height: 48px;
+        padding-left: 15px;
+        padding-right: 15px;
+        font-size: 18px;
+      }
+      input#Email {
+        max-width: 100%;
+        width: 332px !important;
+      }
+    }
+    .mktoButtonRow {
+      order: -1;
+      span.mktoButtonWrap.mktoNative {
+        margin-left: 10px !important;
+        button.mktoButton {
+          height: 48px;
+          border: 0;
+          background: $dark-blue;
+          width: 190px;
+          text-transform: uppercase;
+          color: #fff;
+          font-size: 19px;
+          padding-left: 17px;
+          padding-right: 17px;
+        }
+      }
+    }
+    .mktoFormRow:nth-child(3) {
+      width: 525px;
+      max-width: 100%;
+      margin-top: 10px;
+      display: -webkit-flex;
+      display: -ms-flex;
+      display: flex;
+      justify-content: center;
+      .mktoAsterix, .mktoGutter.mktoHasWidth, .mktoLogicalField.mktoCheckboxList.mktoHasWidth.mktoRequired.mktoValid label {
+        display: none;
+      }
+      .mktoFieldDescriptor.mktoFormCol {
+        .mktoOffset {display: none;}
+        .mktoFieldWrap.mktoRequiredField {
+          display: -webkit-flex;
+          display: -ms-flex;
+          display: flex;
+          flex-direction: row-reverse;
+          padding-top: 5px;
+          justify-content: center;
+
+          label.mktoLabel.mktoHasWidth {
+            color: #fff;
+            text-align: center;
+            a {
+              font-weight: 600 !important;
+              color: #fff !important;
+              text-decoration: underline;
+            }
+            font-weight: 300 !important;
+          }
+          .mktoLogicalField.mktoCheckboxList.mktoHasWidth.mktoRequired {
+            width: 25px !important;
+            padding-left: 0;
+            padding-top: 2.9px;
+
+
+            [type='checkbox'] {
+              opacity: 0;
+            }
+
+
+            [type='checkbox'] + label {
+              display: block !important;
+              box-sizing: border-box;
+              border-radius: 2px;
+              width: 18px;
+              height: 19px;
+              background: #fff;
+              border: 1px solid $gray;
+              margin: 0 !important;
+              padding: 0 !important;
+            }
+
+            [type='checkbox']:checked + label:before {
+              content: '\2714';
+              position: absolute;
+              top: 9px;
+              left: 4px;
+              z-index: 2;
+              font-size: 14px;
+              color: $green;
+            }
+          }
+        }
+      }
+      @media screen and (max-width: 768px) {
+        margin-top: 10px;
+        margin-bottom: 10px;
+      }
+    }
+
+
+    @media screen and (max-width: 600px) {
+      .mktoFormRow:nth-child(3) {
+        width: 100%;
+        justify-content: flex-start;
+      }
+      .mktoFormRow:nth-child(2) input#Email {
+        width: 210px !important;
+        font-size: 15px;
+      }
+      .mktoButtonRow span.mktoButtonWrap.mktoNative button.mktoButton {
+        width: 110px !important;
+        font-size: 15px;
+      }
+    }
+  }
+
+  form.footer-form {
+    h3 {
+      font-size: 20px;
+    }
+
+    label {
+      display: none;
+
+      &.show-label {
+        display: inline-block;
+      }
+    }
+
+    input:not([type='checkbox']) {
+      height: 48px;
+      border-radius: 2px;
+
+      &#footerEmail {
+        width: 261px;
+        border: 1px solid gray;
+        background: white;
+        padding-left: 15px;
+      }
+
+      &[type='submit'] {
+        padding: 10px 15px;
+      }
+    }
+
+    .form-checkbox {
+      position: relative;
+      // left: -14px;
+      abbr {
+        display: none;
+      }
+
+      input {
+        opacity: 0;
+        position: relative;
+        left: 3px;
+        bottom: -7px;
+        z-index: 3;
+      }
+
+      span {
+        height: 19px;
+        width: 18px;
+        border: 1px solid black;
+        display: inline-block;
+        position: relative;
+        top: 3px;
+        left: -13px;
+        transition: all 0.12s ease;
+      }
+
+      [type='checkbox']:checked + span {
+        background: $green;
+        border: 1px solid $green;
+      }
+
+      [type='checkbox']:checked + span:before {
+        content: '\2714';
+        position: absolute;
+        top: -3px;
+        left: 2px;
+        z-index: 2;
+        font-size: 14px;
+        color: #fff;
+      }
+    }
+  }
+}
+
 footer#siteFooter {
   background-image: url("../img/footer-bg.png");
   background-position: bottom right;
@@ -530,7 +752,9 @@ footer#siteFooter {
   }
 
   .footer-left {
-    border-right: 1px solid #000;
+    border-top: 1px solid rgba($gray, .5);
+    padding-top: 30px;
+    margin-top: 20px;
 
     .footer-menu {
       font-size: 16px;
@@ -563,192 +787,6 @@ footer#siteFooter {
 
     h4.sign-up-title {
       font-size: 20px;
-    }
-
-    form#mktoForm_1479 {
-      padding: 0;
-      max-width: 100%;
-      display: -webkit-flex;
-      display: -ms-flex;
-      display: flex;
-      flex-wrap: wrap;
-
-      .mktoFormRow:nth-child(2) { //email
-        order: -1;
-        label[for="Email"], .mktoOffset, .mktoClear, .mktoGutter.mktoHasWidth {
-          display: none;
-        }
-        input {
-          width: 100%;
-          border-right: 2px;
-          border: 1px solid $gray;
-          height: 48px;
-          padding-left: 15px;
-          padding-right: 15px;
-          font-size: 18px;
-        }
-        input#Email {
-          max-width: 260px;
-        }
-      }
-      .mktoButtonRow {
-        order: -1;
-        span.mktoButtonWrap.mktoNative {
-          margin-left: 10px !important;
-          button.mktoButton {
-            height: 48px;
-            border: 0;
-            background: $green;
-            color: #fff;
-            font-size: 19px;
-            padding-left: 17px;
-            padding-right: 17px;
-          }
-        }
-      }
-      .mktoFormRow:nth-child(3) {
-        .mktoAsterix, .mktoGutter.mktoHasWidth, .mktoLogicalField.mktoCheckboxList.mktoHasWidth.mktoRequired.mktoValid label {
-          display: none;
-        }
-        .mktoFieldDescriptor.mktoFormCol {
-          .mktoOffset {display: none;}
-          .mktoFieldWrap.mktoRequiredField {
-            display: -webkit-flex;
-            display: -ms-flex;
-            display: flex;
-            flex-direction: row-reverse;
-            padding-top: 5px;
-
-            label.mktoLabel.mktoHasWidth {
-              a {
-                color: $blue !important;
-                font-weight: 400 !important;
-              }
-              font-weight: 300 !important;
-            }
-            .mktoLogicalField.mktoCheckboxList.mktoHasWidth.mktoRequired {
-              width: 25px !important;
-              padding-left: 0;
-              padding-top: 2.9px;
-
-
-              [type='checkbox'] {
-                opacity: 0;
-              }
-
-
-              [type='checkbox'] + label {
-                display: block !important;
-                box-sizing: border-box;
-                border-radius: 2px;
-                width: 18px;
-                height: 19px;
-                background: #fff;
-                border: 1px solid $gray;
-                margin: 0 !important;
-                padding: 0 !important;
-              }
-
-              [type='checkbox']:checked + label:before {
-                content: '\2714';
-                position: absolute;
-                top: 9px;
-                left: 4px;
-                z-index: 2;
-                font-size: 14px;
-                color: $green;
-              }
-            }
-          }
-        }
-        @media screen and (max-width: 768px) {
-          margin-top: 10px;
-          margin-bottom: 10px;
-        }
-      }
-
-
-      @media screen and (max-width: 1100px) {
-        flex-direction: column;
-        .mktoButtonRow {
-          order: 0;
-          span.mktoButtonWrap.mktoNative {
-            margin-left: 0 !important;
-          }
-        }
-      }
-    }
-
-    form.footer-form {
-      h3 {
-        font-size: 20px;
-      }
-
-      label {
-        display: none;
-
-        &.show-label {
-          display: inline-block;
-        }
-      }
-
-      input:not([type='checkbox']) {
-        height: 48px;
-        border-radius: 2px;
-
-        &#footerEmail {
-          width: 261px;
-          border: 1px solid gray;
-          background: white;
-          padding-left: 15px;
-        }
-
-        &[type='submit'] {
-          padding: 10px 15px;
-        }
-      }
-
-      .form-checkbox {
-        position: relative;
-        // left: -14px;
-        abbr {
-          display: none;
-        }
-
-        input {
-          opacity: 0;
-          position: relative;
-          left: 3px;
-          bottom: -7px;
-          z-index: 3;
-        }
-
-        span {
-          height: 19px;
-          width: 18px;
-          border: 1px solid black;
-          display: inline-block;
-          position: relative;
-          top: 3px;
-          left: -13px;
-          transition: all 0.12s ease;
-        }
-
-        [type='checkbox']:checked + span {
-          background: $green;
-          border: 1px solid $green;
-        }
-
-        [type='checkbox']:checked + span:before {
-          content: '\2714';
-          position: absolute;
-          top: -3px;
-          left: 2px;
-          z-index: 2;
-          font-size: 14px;
-          color: #fff;
-        }
-      }
     }
 
     ul.socials {
