--- a/css/_vars.scss
+++ b/css/_vars.scss
@@ -1,5 +1,7 @@
 $gray: #8b8b8b;
-$blue: #7ba7d3;
+$dark-gray: #acacac;
+$alt-gray: #D7D7D7;
+$blue: #7BA7D3;
 $dark-blue: #2c4257;
 $green: #40be46;
 $bright-gray: #eaebee;
