--- a/css/style.css
+++ b/css/style.css
@@ -691,6 +691,9 @@ section#downloads h5 {
   font-size: 17px; }
 section#downloads .package-wrapper {
   margin-bottom: 8px; }
+  section#downloads .package-wrapper.package-copy-plus-download textarea {
+    z-index: -100;
+    opacity: 0; }
 section#downloads .cn-box {
   min-width: 68px;
   background: #fff;
@@ -715,9 +718,11 @@ section#downloads .cn-box {
     font-family: monospace; }
   section#downloads .cn-box.cn-copy {
     cursor: pointer; }
-  section#downloads .cn-box.small img {
-    margin-left: auto;
-    margin-right: auto; }
+  section#downloads .cn-box.small {
+    max-width: 68px; }
+    section#downloads .cn-box.small img {
+      margin-left: auto;
+      margin-right: auto; }
   section#downloads .cn-box.big {
     width: 295px;
     max-width: 100%; }
@@ -771,7 +776,7 @@ section#downloads .cn-box {
     section#downloads .cn-box.cn-action img {
       margin-left: auto;
       margin-right: auto; }
-    section#downloads .cn-box.cn-action.cn-copy {
+    section#downloads .cn-box.cn-action.cn-copy, section#downloads .cn-box.cn-action.cn-copy-multiline {
       background-image: url("../img/copy-icon.png");
       cursor: pointer; }
     section#downloads .cn-box.cn-action.cn-download {
@@ -785,13 +790,28 @@ section#downloads .cn-box {
       background-image: url("../img/link-icon.png"); }
 section#downloads .download-questions h2 {
   font-size: 35px; }
+section#downloads .download-questions .q-box {
+  color: black;
+  margin-left: 30px;
+  margin-right: 30px; }
+  section#downloads .download-questions .q-box:first-child {
+    margin-left: 15px; }
+  section#downloads .download-questions .q-box:last-child {
+    margin-right: 15px; }
+  section#downloads .download-questions .q-box .q-top {
+    width: 68px;
+    height: 57px;
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #eaebee;
+    border-radius: 2px; }
+    section#downloads .download-questions .q-box .q-top img {
+      width: 31px; }
 section#downloads .download-questions p {
   text-align: center; }
-  section#downloads .download-questions p img {
-    width: 1em;
-    position: relative;
-    bottom: 1px;
-    margin-left: 2px; }
   @media screen and (max-width: 480px) {
     section#downloads .download-questions p {
       width: 300px;
