--- a/css/style.scss
+++ b/css/style.scss
@@ -843,6 +843,12 @@ section#downloads {
 
   .package-wrapper {
     margin-bottom: 8px;
+    &.package-copy-plus-download {
+      textarea {
+        z-index: -100;
+        opacity: 0;
+      }
+    }
   }
 
   .cn-box {
@@ -875,6 +881,7 @@ section#downloads {
     }
 
     &.small {
+      max-width: 68px;
       img {
         margin-left: auto;
         margin-right: auto;
@@ -947,7 +954,7 @@ section#downloads {
         margin-left: auto;
         margin-right: auto;
       }
-      &.cn-copy {
+      &.cn-copy, &.cn-copy-multiline {
         background-image: url('../img/copy-icon.png');
         cursor: pointer;
       }
@@ -972,15 +979,35 @@ section#downloads {
       font-size: 35px;
     }
 
+    .q-box {
+      color: black;
+      margin-left: 30px;
+      margin-right: 30px;
+      &:first-child {
+        margin-left: 15px;
+      }
+      &:last-child {
+        margin-right: 15px;
+      }
+      .q-top {
+        width: 68px;
+        height: 57px;
+        display: -webkit-flex;
+        display: -ms-flex;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: $bright-gray;
+        border-radius: 2px;
+        img {
+          width: 31px;
+        }
+      }
+    }
+
     p {
       text-align: center;
 
-      img {
-        width: 1em;
-        position: relative;
-        bottom: 1px;
-        margin-left: 2px;
-      }
       @media screen and (max-width: 480px) {
         width: 300px;
         margin-left: auto;
