--- a/css/style.scss
+++ b/css/style.scss
@@ -522,6 +522,16 @@ section.contact-us {
 
 section.sign-up {
 
+  img.letter {
+    max-width: 200px;
+    bottom: -10px;
+    left: -130px;
+    @media screen and (max-width: 480px) {
+      bottom: 50px;
+      left: -80px;
+    }
+  }
+
   form#mktoForm_1479 {
     padding: 0;
     max-width: 100%;
