--- a/css/style.scss
+++ b/css/style.scss
@@ -16,7 +16,7 @@ body {
   font-family: $main-font !important;
   font-weight: 300;
 }
-
+html{scroll-behavior:smooth}
 html {
   font-size: 18px;
   font-family: $main-font;
@@ -170,6 +170,10 @@ header#masthead {
   border-bottom: 1px solid $bright-gray;
   padding-top: 8px;
   padding-bottom: 8px;
+  .subscribe-btn {
+    border: 1px solid $dark-blue;
+    color: $dark-blue;
+  }
 }
 
 
