install command popup

--- a/css/style.scss
+++ b/css/style.scss
@@ -1030,6 +1030,27 @@ section#downloads {
     }
   }
 }
+
+body.downloads {
+  .modal-body {
+    textarea {
+      width: 100%;
+      min-height: 200px;
+      padding: 15px;
+      border: none;
+      border-radius: 2px;
+      background: $bright-gray;
+    }
+  }
+  .modal-footer {
+    button {
+      font-size: 1rem;
+      &.modal-copy-button {
+        background: $blue;
+      }
+    }
+  }
+}
 //#downloads
 
 body.privacy-policy {
