--- a/css/style.css
+++ b/css/style.css
@@ -832,6 +832,18 @@ section#downloads .download-questions p {
       margin-left: auto;
       margin-right: auto; } }
 
+body.downloads .modal-body textarea {
+  width: 100%;
+  min-height: 200px;
+  padding: 15px;
+  border: none;
+  border-radius: 2px;
+  background: #eaebee; }
+body.downloads .modal-footer button {
+  font-size: 1rem; }
+  body.downloads .modal-footer button.modal-copy-button {
+    background: #7BA7D3; }
+
 body.privacy-policy ol,
 body.privacy-policy ul {
   padding-left: 1.5em;
