--- a/css/_bs-tooltip.scss
+++ b/css/_bs-tooltip.scss
@@ -5,11 +5,19 @@ $arrow-border-color: #e3e4e4;
 $arrow-bg-color: white;
 
 .tooltip {
+  width: auto;
+  max-width: 90vw;
+  opacity: 1 !important;
+  white-space: pre-line;
   .tooltip-inner {
     background: $tt-bg-color;
     color: $tt-text-color;
     border: 2px solid $tt-border-color;
-    max-width: 250px;
+    // max-width: 250px;
+    text-align: left;
+    width: auto;
+    max-width: 90vw;
+    white-space: pre-line;
   }
   .arrow {
     width: 11px;
