--- a/css/style.css
+++ b/css/style.css
@@ -188,10 +188,11 @@ h1 {
   font-size: 0.722rem;
   /* 13/18 */
   transition: all 0.32s ease; }
-  .btn:hover {
-    opacity: 0.75; }
   .btn.bg-blue:hover {
-    color: #fff; }
+    color: #fff;
+    background-color: #2F6799; }
+  .btn.bg-bright-gray:hover {
+    background-color: #DEE7F9; }
 
 a.big-btn {
   padding: 0.556rem 1.78rem;
@@ -210,8 +211,8 @@ a.big-btn {
   font-weight: 400; }
   .cta:hover {
     color: white; }
-  .cta.bg-green:hover {
-    background-color: #3fd63c; }
+  .cta.bg-green {
+    color: white; }
 
 .container {
   max-width: 100%; }
@@ -258,6 +259,37 @@ a.big-btn {
 .blue-gradient-bg {
   background: linear-gradient(254.27deg, #2c4257 51.72%, #7BA7D3 98.82%); }
 
+.arrow-cta example_f {
+  border-radius: 4px;
+  background: linear-gradient(to right, #67b26b, #4ca2cb) !important;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 22px;
+  padding: 20px;
+  width: 200px;
+  transition: all 0.4s;
+  cursor: pointer;
+  margin: 5px; }
+.arrow-cta .example_f span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.4s; }
+.arrow-cta .example_f span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s; }
+.arrow-cta .example_f:hover span {
+  padding-right: 25px; }
+.arrow-cta .example_f:hover span:after {
+  opacity: 1;
+  right: 0; }
+
 header#masthead {
   border-bottom: 1px solid #eaebee;
   padding-top: 8px;
@@ -265,6 +297,18 @@ header#masthead {
   header#masthead .subscribe-btn {
     border: 1px solid #2c4257;
     color: #2c4257; }
+  header#masthead a.btn.bg-blue.white img {
+    position: relative;
+    bottom: 1px; }
+  @media screen and (max-width: 480px) {
+    header#masthead .header-hamburger-col {
+      padding-right: 5px; }
+    header#masthead button.hamburger--collapse {
+      padding-right: 0; }
+      header#masthead button.hamburger--collapse .hamburger-inner {
+        width: 30px; }
+        header#masthead button.hamburger--collapse .hamburger-inner:before, header#masthead button.hamburger--collapse .hamburger-inner:after {
+          width: 30px; } }
 
 .hero-bg, .contact-bg {
   width: 15.6vw;
@@ -275,12 +319,19 @@ section#hero .hero-bg {
   left: 0; }
   section#hero .hero-bg.downloads-hero-bg {
     top: 150px; }
+  @media screen and (max-width: 480px) {
+    section#hero .hero-bg .homepage-hero-paragraph {
+      font-size: 1rem; } }
 section#hero .hero-content {
   margin-left: auto;
   margin-right: auto; }
   section#hero .hero-content p {
     font-size: 1.111rem;
     /* 20/18 */ }
+
+section#downloadsHero .d-only-hero-bg {
+  top: -30px;
+  width: 165px; }
 
 html body .mktoFormRow .mktoError .mktoErrorMsg {
   border-radius: 0;
@@ -354,7 +405,7 @@ section.learn-more .lm-obj {
     section.learn-more .lm-obj .content a.big-btn {
       transition: all 0.32s ease; }
       section.learn-more .lm-obj .content a.big-btn:hover {
-        background-color: #73b0ec; }
+        background-color: #3E6387; }
 
 section.users .users-flex {
   max-width: 750px;
@@ -412,9 +463,9 @@ section.testis {
       outline: 0 !important; }
       section.testis .testi-cartousel-wrapper .cs-slick-nav.cs-slick-right {
         transform: rotate(180deg);
-        right: -50px; }
+        right: -80px; }
       section.testis .testi-cartousel-wrapper .cs-slick-nav.cs-slick-left {
-        left: -50px; }
+        left: -80px; }
 
 section.contact-us form#mktoForm_2684 {
   width: 687px !important;
@@ -438,7 +489,10 @@ section.contact-us form#mktoForm_2684 {
     margin-left: auto;
     margin-right: auto;
     background: #40be46;
-    font-size: 19px; }
+    font-size: 19px;
+    transition: all 0.32s ease; }
+    section.contact-us form#mktoForm_2684 button[type="submit"]:hover {
+      background-color: #07940E; }
   section.contact-us form#mktoForm_2684 .mktoFieldDescriptor.mktoFormCol {
     width: 100%; }
     section.contact-us form#mktoForm_2684 .mktoFieldDescriptor.mktoFormCol .mktoFieldWrap {
@@ -487,6 +541,9 @@ section.contact-us img.contact-bg {
   top: -200px;
   z-index: 0; }
 
+@media screen and (max-width: 768px) {
+  section.sign-up img.letter {
+    display: none !important; } }
 section.sign-up img.letter {
   max-width: 200px;
   bottom: -10px;
@@ -503,6 +560,9 @@ section.sign-up form#mktoForm_1479 {
   display: flex;
   flex-wrap: wrap;
   width: 535px !important; }
+  @media screen and (max-width: 480px) {
+    section.sign-up form#mktoForm_1479 {
+      justify-content: center; } }
   section.sign-up form#mktoForm_1479 input, section.sign-up form#mktoForm_1479 button[type="submit"] {
     border-radius: 2px !important;
     border: none !important; }
@@ -539,7 +599,10 @@ section.sign-up form#mktoForm_1479 {
         color: #fff;
         font-size: 19px;
         padding-left: 17px;
-        padding-right: 17px; }
+        padding-right: 17px;
+        transition: all 0.32s ease; }
+        section.sign-up form#mktoForm_1479 .mktoButtonRow span.mktoButtonWrap.mktoNative button.mktoButton:hover {
+          opacity: 0.8; }
   section.sign-up form#mktoForm_1479 .mktoFormRow:nth-child(3) {
     width: 525px;
     max-width: 100%;
@@ -598,7 +661,7 @@ section.sign-up form#mktoForm_1479 {
   @media screen and (max-width: 600px) {
     section.sign-up form#mktoForm_1479 .mktoFormRow:nth-child(3) {
       width: 100%;
-      justify-content: flex-start; }
+      justify-content: center; }
     section.sign-up form#mktoForm_1479 .mktoFormRow:nth-child(2) input#Email {
       width: 210px !important;
       font-size: 15px; }
@@ -656,6 +719,7 @@ footer#siteFooter {
   background-image: url("../img/footer-bg.png");
   background-position: bottom right;
   background-repeat: no-repeat;
+  background-color: #f7f7f7;
   background-size: 24vw; }
   @media screen and (max-width: 991px) {
     footer#siteFooter {
@@ -683,6 +747,13 @@ footer#siteFooter {
   footer#siteFooter .footer-right ul.socials {
     list-style: none; }
 
+section#downloads .downloads-item-wrapper {
+  background-color: #f6f6f6; }
+section#downloads .download-col-topper {
+  height: 28px; }
+section#downloads .main-downloads-row {
+  width: 1304px;
+  max-width: 100%; }
 section#downloads .ncta {
   padding: 12px 16px;
   color: white;
@@ -698,7 +769,7 @@ section#downloads p {
   font-weight: 400; }
   section#downloads p.front-text {
     font-size: 17px;
-    font-weight: 600;
+    font-weight: 500;
     max-width: 485px; }
 section#downloads h2 {
   font-weight: 300;
@@ -730,12 +801,12 @@ section#downloads .cn-box {
   align-items: center;
   padding: 8px 13px;
   color: #000;
-  font-weight: 400;
+  font-weight: 300 !important;
   font-size: 20px;
   line-height: 1;
   text-align: center;
   transition: all 0.2s ease;
-  font-size: 20px; }
+  font-size: 17px; }
   section#downloads .cn-box.copy-text {
     font-family: monospace; }
   section#downloads .cn-box.cn-copy {
@@ -763,7 +834,8 @@ section#downloads .cn-box {
         padding-left: 0;
         width: 100%; }
         section#downloads .cn-box.cn-main.cn-dropdown .dropdown button.dropdown-toggle {
-          font-size: 20px;
+          font-size: 17px;
+          font-weight: 300;
           padding: 8px 13px;
           background: transparent;
           height: 100%;
@@ -788,7 +860,7 @@ section#downloads .cn-box {
       section#downloads .cn-box.cn-main.cn-dropdown .dropdown-item {
         cursor: pointer; }
   section#downloads .cn-box.cn-action {
-    background-color: #acacac;
+    background-color: #D7D7D7;
     background-repeat: no-repeat;
     background-position: center center;
     transition: all 0.32s ease; }
